# modern-gpt

./: .gitignore  README.md  generate.py  pyproject.toml  pyrightconfig.json
gpt2/: generate.py  lm_dataset.py  meters.py  model.py  muon.py  opts.py  run_pretrain.py  run_pretrain_xla.py  train_tokenizer.py  utils.py
modern_gpt/: model.py  opts.py  train.py  utils.py
modern_lm/: lm_dataset.py  meters.py  model.py  muon.py  opts.py  train.py  utils.py
modern_lm/evals/: __init__.py  hellaswag.py  mc_engine.py  tasks.py
records/v1-2026-03-31_07-00-01/: README.md  train.sh
records/v2-2026-04-04_08-38-15/: README.md  train.sh
records/v3-2026-04-05_14-38-42/: README.md  train.sh
scripts/: download_oscar_dataset.py  prepare_fineweb.py  preprocess_oscar_dataset.py  train.sh
