[project]
name = "modern-lm"
version = "0.1.0"
description = "Modernizing Language Model with recent advancements in architecture, optimization, and training techniques."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Minh-Thien Nguyen", email = "minhnguyent546@gmail.com"},
]
dependencies = [
    "numpy<2.4.0",
    "PyYAML>=6.0.1",
    "regex>=2024.5.15",
    "tokenizers>=0.19.1",
    "torch==2.8.0",
    "tqdm>=4.66.3",
    "datasets>=2.20.0",
    "wandb>=0.17.4",
    "tiktoken>=0.7.0",
    "kernels>=0.12.3",
]

[project.urls]
Repository = "https://github.com/minhnguyent546/modern-lm"

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "hf-transfer>=0.1.9",
    "ruff>=0.12.10",
    "tabulate>=0.10.0",
    "transformers<5.0.0",
]

[tool.ruff]
line-length = 99
target-version = "py312"
exclude = [
    "./thirdparty/",
    "./notebooks/",
]

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C",      # comple-structure
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "RUF013", # implicit-optional
    "UP006",  # non-pep585-annotation (e.g. `list[int]` instead of `List[int]`)
]
extend-safe-fixes = ["UP006"]
ignore = [
    "C901", # complex-structure
    "E101", # mixed-spaces-and-tabs
    "E501", # line-too-long
    "E741", # ambiguous-variable-name
    "F402", # import-shadowed-by-loop-var
    "F823", # undefined-local
]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E402", # module-import-not-at-top-of-file
    "F401", # unused-import
    "F403", # undefined-local-with-import-star
]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "lf"
